--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <div class='header-content'>
       <h1>Ebbinghaus' Note</h1>
       <!-- <h4>学んだこと、覚えてますか？</h4> -->
+      <h4 class='scroll_pos'>aaa</h4>
     </div>
     <div class='nav-border'>
       <div class='nav'>
