--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -22,6 +22,11 @@ img{
   background-color:#D0E0D0;
 }
 
+object{
+	width: 80%;
+	height: 800px;
+	margin: 0 auto;
+}
 .todays-contents{
   display: flex;
   flex-direction: row;
