--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,12 @@
               <div><%= @notebook.title %></div>
             </a>
           </div>
+          <div class='nav-element'>
+            <p></p>
+          </div>
+          <div class='nav-element'>
+            <p></p>
+          </div>
         <% end %>
       </div>
     </div>
